# self-hosted-gpu-actions

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cu  range.hpp
